<package format="3">
  <name>local_planner</name>
  <version>0.0.0</version>
  <description>MobileNetV2 local planner template.</description>
  <maintainer email="example@example.com">maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
